fix forward inline with non-default charset, r/sr=bienvenu, bug 494912